--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: purple;
-    font-family: "JetBrains Mono";
+    font-family: "Noto Sans";
     margin: 0;
     padding: 0;
 }
@@ -14,6 +14,7 @@ p {
 }
 
 .name {
+    font-family: "Papyrus";
     display: inline-flex;
 }
 
