--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     background-color: purple;
     font-family: "Noto Sans";
-    margin: 0;
-    padding: 0;
 }
 
 h1 {
@@ -33,10 +31,18 @@ p {
 
 .name .letter:hover {
     transform: scale(1.5);
-    text-shadow: 0px 0px 4rem aqua);
+    text-shadow: 0px 0px 4rem aqua;
+}
+
+.telegram {
+    padding: 5px;
+    background-color: darkblue;
+    border: aqua 1px solid;
+    border-radius: 6px;
 }
 
 footer {
+    border-top: 1px white dashed;
     background-color: black;
     color: white;
     display: inline-flex;
